# easyagentops

./: .gitignore  CNAME  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  QUICKSTART.md  README.md  docker-compose.yml
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/workflows/: ci-cd.yml  deploy.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
database/: README.md
frontend/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/blog/: page.tsx
frontend/app/contact/: page.tsx
frontend/app/learn/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/tutorials/: page.tsx
frontend/components/: Sidebar.tsx
frontend/public/: CNAME
