[project]
name = "easyagentops-api"
version = "1.0.0"
description = "Backend API for EasyAgentOps webapp"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "pydantic==2.4.2",
    "pydantic-settings==2.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "flake8==6.1.0",
    "black==23.12.0",
    "pylint==3.0.2",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pylint.messages_control]
disable = ["C0111", "R0913"]

[tool.flake8]
exclude = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "*/site-packages",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
